# Alea

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEX_HANDOFF.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.en.md  README.md  SECURITY.md  SUPPORT.md  design-qa.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  package.json
api/: .env.example  Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  auth.py  codex_runner.py  main.py  middleware.py  runtime.py  security.py
api/app/calculators/: __init__.py  sporttery_calc.py
api/app/datasources/: admin_import.py  contract.py  evidence.py
api/app/gate0/: __init__.py  capacity.py
api/app/orchestration/: context.py  fact_verifier.py  methodology.py  notarize.py  notifications.py  rankings.py  result_validator.py  reviews.py  roundtable.py  settlement.py  voting.py
api/app/prompts/: assembly.py  versions.py
api/app/providers/: __init__.py  anthropic.py  capabilities.py  catalog.py  cli.py  cli_catalog.py  cli_executor.py  codex_cli.py  contract.py  fake.py  google.py  openai.py  openai_compat.py
api/app/routers/: admin.py  ledger.py  matches.py  real_ledger.py  roundtable.py  settings.py
api/tests/: conftest.py  test_admin_providers.py  test_admin_roundtables.py  test_admin_users_settings_contract.py  test_api_provider_catalog_contract.py  test_auth.py  test_calculator_golden.py  test_cli_provider.py  test_codex_runner.py  test_executor_bootstrap.py  test_fixture_importer.py  test_g1_auth_rls.py  test_g2_realtime.py  test_g3_celery_recovery.py  test_g4_provider_contract.py  test_g5_data_rules.py  test_g6_capacity.py  test_health.py  test_middleware.py  test_orchestration_workflows.py  test_rankings_contract.py  test_roundtable_hardening_contract.py  test_roundtable_migration_contract.py  test_runtime_gateway.py  test_security.py  test_settlement_database_contract.py  test_settlement_tasks_contract.py  test_sporttery_backfill.py
docs/: PRD.md  (+8 more)
(+272 files in other folders)
