[project]
name = "alea-api"
version = "0.1.0"
description = "Alea API, roundtable orchestration, and background workers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5,<6",
    "cryptography>=45,<47",
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "jsonschema>=4.25,<5",
    "psycopg[binary]>=3.2,<4",
    "pyjwt>=2.10,<3",
    "pydantic>=2.11,<3",
    "redis>=6,<8",
    "supabase>=2.18,<3",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.17,<2",
    "pytest>=8.4,<10",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = "app/generated/"
disable_error_code = ["no-any-return", "untyped-decorator"]

[[tool.mypy.overrides]]
module = "app.generated.*"
ignore_errors = true
